--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -18,7 +18,7 @@
 
 <div class="jumbotron">
   <h1 class="welcome">Welcome to Game Keeper</h1>
-  <div class="col-4 offset-4 align-self-center">
+  <div class="col-4 offset-4 align-self-center searchbar">
     <div class="input-group mb-3">
       <input type="text" id="search-word" class="form-control" placeholder="Search games" aria-label="Search games"
         aria-describedby="button-addon2">
@@ -35,7 +35,7 @@
   <div class="row container">
     <h3>Filter Search</h3>
     <hr>
-    <div class="col-3">
+    <div class="col-3 filter">
       <div class="form-check form-switch">
         <label for="playerMin" class="form-label">Minimum Players <span><input type="text" id="minPlayerInput"
               value=""></span></label>
@@ -44,7 +44,7 @@
           onchange="minPlayerInput(this.value)">
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 filter">
       <div class="form-check form-switch">
         <label for="playerMax" class="form-label">Maximum Players <span><input type="text" id="maxPlayerInput"
               value=""></span></label>
@@ -53,7 +53,7 @@
           onchange="maxPlayerInput(this.value)">
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 filter">
       <div class="form-check form-switch">
         <label for="gameTime" class="form-label">Max Game Time (minutes) <span><input type="text" id="timeInput"
               value=""></span></label>
@@ -62,7 +62,7 @@
           onchange="updateTimeInput(this.value)">
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 filter">
       <div class="form-check form-switch">
         <label for="playerAge" class="form-label">Minimum Age <span><input type="text" id="ageInput"
               value=""></span></label>
@@ -76,7 +76,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-3">
+    <div class="col-3 signup-col">
       <h2 class="welcomeTitles">Sign up below to save your games!</h2>
       <form class="signup">
         <div class="form-group">
