changing searchbar to full length for use in phone

--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -18,7 +18,7 @@
 
 <div class="jumbotron">
   <h1 class="welcome">Welcome to Game Keeper</h1>
-  <div class="col-4 offset-4 align-self-center searchbar">
+  <div class="searchbar">
     <div class="input-group mb-3">
       <input type="text" id="search-word" class="form-control" placeholder="Search games" aria-label="Search games"
         aria-describedby="button-addon2">
