--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -25,7 +25,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="welcome">Welcome to Game Keeper</h1>
-    <div class="align-self-center">
+    <div class="searchbar">
       <div class="input-group mb-3">
         <input type="text" id="search-word" class="form-control" placeholder="Search games" aria-label="Search games"
           aria-describedby="button-addon2">
